# marcus

./: .env  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml  requirements.txt
apps/core/: batch_views.py  models.py  urls.py  views.py
apps/core/migrations/: 0001_initial.py
apps/core/templatetags/: currency_tags.py
apps/products/migrations/: 0009_stocktransfer_purchaseorder_goodsreceipt_and_more.py
apps/products/models/: __init__.py  products_models.py  supply_chain.py
config/: urls.py
settings/: base.py  dev.py  prod.py
src/: asgi.py  wsgi.py
src/settings/: base.py
templates/: base.html
templates/account/: login.html  signup.html
templates/core/: batch_detail.html  batch_management.html  business_list.html  category_list.html  dashboard.html  expiry_report.html  low_stock_report.html  product_detail.html  product_list.html  purchase_orders.html  settings.html  stock_transfers.html  suppliers.html
templates/partials/: add_business_form.html  add_product_form.html  edit_product_form.html
